update: small changes

--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
 </head>
  
 <body ng-controller="ProductsCtr">
-<p class="message">Success!</p>
-<p class="message">This is your application landing page.</p>
-<p class="message">For more information about the available APIs, developer resources and support, visit our <a href="http://developers.businesscatalyst.com" target="_blank">Developers Program</a> website.</p>
-
-<p class="message-success" ng-show="showTrigger">Success! Data have been saved!</p>
-
-<p>Search by name: <input ng-model="query"></p>
+	<p class="message">Hi!</p>
+	<p>Please find list of products below.</p>
+	
+	<p class="message-success" ng-show="showTrigger">Success! Data have been saved!</p>
+	
+	<p>Search by name: <input ng-model="query"></p>
 	<ul id="js-catalogues" class="root">
 		<li class="header">
 			<span class="name">Product Name</span>
